# serializer version: 1
# name: TestBacktestFutureStrategy.test_btcusdt_ls
  'd85f1ef106c2c937bf940f04798c3a2cfaa57e5433185a7d5a31851b9827616f'
# ---
# name: TestBacktestFutureStrategy.test_btcusdt_ls.1
  '30486d9a79ea54c7587a19d85a8e8aadabfb7f36f9ce3ee1b8708a31b683f6ac'
# ---
# name: TestBacktestFutureStrategy.test_btcusdt_ls.2
  'cc3ca3f353dfbb692eb866436d55aea7317af31b3126e94f044d7c4b12ba638a'
# ---
# name: TestBacktestFutureStrategy.test_btcusdt_ls.3
  '1486e50dbc7c814791a53a758306c1bbf9f8a165c295e47d1cb34a5ac1941c33'
# ---
# name: TestBacktestFutureStrategy.test_limit_order
  '0468d636981f961e5cd76964da23d2e781d6f08777277bf6820af09ebf9407db'
# ---
# name: TestBacktestFutureStrategy.test_limit_order.1
  'db9cc3fffdec72a482a685d1965eb4b7b431fd1caf0daa6ed037946a97d1c511'
# ---
# name: TestBacktestFutureStrategy.test_limit_order.2
  '8ee2c1255837c642ebf388c75a8ff7fa244b8ac3434af256a7c74f08231892df'
# ---
# name: TestBacktestFutureStrategy.test_limit_order.3
  '09a25e0a38078508e29cd59ee628ba5a01382a518b9e80673097a2fe2b661045'
# ---
# name: TestBacktestFutureStrategy.test_liquidation
  'e5cd99e0ae8e526d44538cb8194e76a62f02e09658e6998249880f2a23c66dbe'
# ---
# name: TestBacktestFutureStrategy.test_liquidation.1
  '9009c50224f3b5fcc8a3284e5417a14e5bc7070f2ab842b159d6ed661c07fc22'
# ---
# name: TestBacktestFutureStrategy.test_liquidation.2
  '24afdbc9ed20fc4309896503bc6eb2105319578c75b82f5e51db70c38775b41c'
# ---
# name: TestBacktestFutureStrategy.test_liquidation.3
  'af0c05b3cdd9c517e985bb74447a6ce88acb850b1db2dabfc59d73b7df37b58f'
# ---
# name: TestBacktestSpotStrategy.test_btcusdt
  'b4bfc62bbc96c22f8ae30ed1536830b83815552acf5271cd0d32e6d06a5b1e57'
# ---
# name: TestBacktestSpotStrategy.test_btcusdt.1
  'd8fd97da4b8d357c8f05dcf4602ecb627573afd2310191bb52913e46fdbc6a24'
# ---
# name: TestBacktestSpotStrategy.test_closed_only
  'b4bfc62bbc96c22f8ae30ed1536830b83815552acf5271cd0d32e6d06a5b1e57'
# ---
# name: TestBacktestSpotStrategy.test_closed_only.1
  'd8fd97da4b8d357c8f05dcf4602ecb627573afd2310191bb52913e46fdbc6a24'
# ---
# name: TestBacktestSpotStrategy.test_limit_order
  '6b556aeac3a9c782668b9ba84dc574ce29bd65bb766f74b89bf89d029ae79399'
# ---
# name: TestBacktestSpotStrategy.test_limit_order.1
  '7b0e5fcd6fcecf33ac394bc18d981c8fb7470ec66e3ced3c282421e65acb83d6'
# ---
# name: TestBacktestSpotStrategy.test_limit_order.2
  '6e20cf0b59ebbbfea59698200fab9f18083f7b903dd80cbd587956cfb6473a3c'
# ---
# name: TestBacktestSpotStrategy.test_limit_order.3
  '480fe12854b0f62375c54feab550c0dab03851c79c6311767c7b3055d3fdfa48'
# ---
# name: TestBacktestSpotStrategy.test_msft
  'a833e74e1e47d2919a8efef2cab710b9030a901b22819028e3a24d1dbd0b8bf1'
# ---
# name: TestBacktestSpotStrategy.test_msft.1
  '2ed5875faf780ea4e99640c99ad166820c82a756dabcaffe786cd153c5ea6670'
# ---
# name: TestBacktestSpotStrategy.test_optimize
  'e7909ba321a8a12c884345a0b9fe0d0b5095d9ff552ef2f067c8f786984d3100'
# ---
# name: TestBacktestSpotStrategy.test_optimize.1
  'b4bfc62bbc96c22f8ae30ed1536830b83815552acf5271cd0d32e6d06a5b1e57'
# ---
# name: TestBacktestSpotStrategy.test_optimize.2
  'db96ff54fa80a09191fb8c5e067eed6f09ce9a29f60f62b22b7659ffa0ab5ad2'
# ---
# name: TestBacktestSpotStrategy.test_preload
  'b4bfc62bbc96c22f8ae30ed1536830b83815552acf5271cd0d32e6d06a5b1e57'
# ---
# name: TestBacktestSpotStrategy.test_preload.1
  'd8fd97da4b8d357c8f05dcf4602ecb627573afd2310191bb52913e46fdbc6a24'
# ---
